
Release 5.0.10 (unreleased)
===========================

Bug fixes
---------

- Avoid error preventing run when checking remaining time using SLURM job array.

- Fixes for parallel runs in sedimentation source term with humid atmosphere
  model.

- Fix allocation of pmappers to scalar fields in atmospheric aerosols model. 

- Fix allocation size for values at injection in case of mass source terms
  with coupled Reynolds stress solver.

- GUI: fix missing update of modified scalar names for groundwater flows.

- GUI: fix loss of previous deactivated wall function setting when reopened.

- trackcvg: allow saving state only when data is loaded and loading it when
  saved state is present.

- CFDStudy: allow loading studies with no MESH or POST subdirectories.

- Fix improved hydrostatic treatment and PISO-like iterations
  (nterup > 1 and iphydr = 1).

- GUI: fix crash on startup on some recent systems.

Release 5.0.9 (Sep 26 2018)
===========================

Bug fixes
---------

- Fixes to atmospheric chemistry model.

- Lagrangian module: fix resuspension when having internal deposition.

- Compressible model: fix inverted arguments for user velocity source terms.

- Radiative model: fix GUI-defined BC selection between reflecting wall and
  prescribed flux BC for grey/black wall.

- GUI: fix various crashes with th PyQt API 2(mostly on systems using PyQt5,
  as these default to the concerned API).

- GUI: fixes for addition and handling of coal classes.

- Fix an uninitialised option (reconstruction flag) if arakawa coef. is 0 and
  there is anisotropic diffusion on pressure increment.

- GUI: fix bug for RSM coupled solver in the initilization of turbulent
  variables by formula.

- GUI: fix default time stepping type (unsteady) when information missing
  from the XML file.

- Fix for missing legacy (Fortran) cs_user_head_losses.f90 file from
  installed reference files.

- Fix face external force projection with tensorial diffusion
  and porous models 1, 2.